# faq-rag-chatbot

./: .env.example  .gitignore  README.md  pyproject.toml
data/: chunks.json  faq_document.txt
output/: sample.json  sample_queries.json
src/: build_index.py  evaluator.py  query.py  utils.py
tests/: test_core.py
